Deployment/01-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jitsi
  name: jitsi
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      containers:
        - name: jicofo
          image: reg-dhc.app.corpintra.net/jitsi/jicofo:latest
          imagePullPolicy: Always
        - name: prosody
          image: reg-dhc.app.corpintra.net/jitsi/prosody:latest
          imagePullPolicy: Always
        - name: web
          image: reg-dhc.app.corpintra.net/jitsi/web:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: icon-vol
            mountPath: /usr/share/jitsi-meet/images/watermark.png
            subPath: watermark.png
        - name: jvb
          image: reg-dhc.app.corpintra.net/jitsi/jvb:latest
          imagePullPolicy: Always
      volumes:
      - name: icon-vol
        configMap:
          name: jitsi-icon
      securityContext:
        runAsUser: 1001
      #   runAsGroup: 9999
      #   fsGroup: 9999
      #   supplementalGroups:
      #   - 9999
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  namespace: jitsi
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  - name: "https"
    port: 4443
    targetPort: 4443
  selector:
    k8s-app: jitsi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jitsi
  namespace: jitsi
  annotations:
    kubernetes.io/ingress.class: traefik-prod
spec:
  rules:
  - host: ccs2sfmc.corpinter.net
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: http
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jitsi-np
  namespace: jitsi
spec:
  podSelector:
    matchLabels:
      k8s-app: jitsi
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
      - port: 4443
        protocol: TCP
      - port: 30300
        protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb-udp
  namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - port: 30300
    protocol: UDP
    targetPort: 30300
    nodePort: 30007
  selector:
    k8s-app: jitsi
